--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	
 </head>
 <body>
-	<button id='btn1'>Dark Mode</button>
-	<button id="btn2">Light Mode</button>
+	<button id='btn1'>dark Mode</button>
+	<button id="btn2">light Mode</button>
 	<div>
 	<p id="components">
 		<h1>Diary</h1>
